<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.engin.cointrack.feature.home.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.engin.cointrack.feature.favourite.ui.FavouriteFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_favouriteFragment_to_coinDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:destination="@id/coinDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/coinDetailFragment"
        android:name="com.engin.cointrack.feature.coin_detail.ui.CoinDetailFragment"
        android:label="@string/coin_detail"
        tools:layout="@layout/fragment_coin_detail" >
        <argument
            android:name="id"
            app:argType="string" />
        <argument
            android:name="name"
            app:argType="string" />
    </fragment>
    <action
        android:id="@+id/action_global_coinDetailFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popExitAnim="@anim/slide_out_right"
        app:popEnterAnim="@anim/slide_in_left"
        app:destination="@id/coinDetailFragment"
        app:popUpTo="@id/coinDetailFragment"
        app:popUpToInclusive="false" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.engin.cointrack.feature.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:launchSingleTop="true"
        app:popUpTo="@id/main_graph" />
</navigation>