<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".feature.coin_detail.ui.CoinDetailFragment">

        <TextView
            android:id="@+id/description_label"
            style="@style/TextAppearance.CoinTrack.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="@dimen/spacing_xx_large"
            android:layout_marginTop="@dimen/spacing_huge"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coin_image" />

        <ImageView
            android:id="@+id/coin_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/spacing_xx_large"
            android:layout_marginTop="@dimen/spacing_huge"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/description"
            style="@style/TextAppearance.CoinTrack.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xx_large"
            android:layout_marginHorizontal="@dimen/spacing_xx_large"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_label"
            tools:text="@tools:sample/lorem/random"/>

        <TextView
            android:id="@+id/current_price_text"
            style="@style/TextAppearance.CoinTrack.DisplaySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/coin_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/coin_image"
            app:layout_constraintTop_toTopOf="@+id/coin_image"
            tools:text="$40.435" />

        <LinearLayout
            android:id="@+id/row_hash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xx_large"
            android:layout_marginTop="@dimen/spacing_xx_large"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description">

            <TextView
                android:id="@+id/hashing_label"
                style="@style/TextAppearance.CoinTrack.TitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hashing_algorithm"
                android:layout_weight="1"
                tools:text="Hasging Algorithm : " />

            <TextView
                android:id="@+id/hashing_algorithm"
                style="@style/TextAppearance.CoinTrack.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                tools:text="SHA256"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xx_large"
            android:layout_marginTop="@dimen/spacing_xx_large"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row_hash">

            <TextView
                android:id="@+id/price_change_24h_label"
                style="@style/TextAppearance.CoinTrack.TitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_change_24h"
                android:layout_weight="1"
                tools:text="Price Change 24h  : " />

            <TextView
                android:id="@+id/price_change_24h"
                style="@style/TextAppearance.CoinTrack.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                tools:text="%43" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/interval_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xx_large"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/spacing_xx_large"
            app:helperText="Please enter refresh interval. Default is 5 second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/interval_input"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Refresh Interval" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.engin.cointrack.core.ui.customview.EmptyView
            android:id="@+id/emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_xx_large"
            android:layout_marginTop="@dimen/spacing_huge"
            android:layout_marginBottom="@dimen/spacing_x_large"
            android:text="Add to Favourite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interval_input_layout"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
